src/generate/rust/schema/snapshots/tests__data_enum.snap
---
created: "2019-06-03T12:46:55.615453Z"
creator: insta@0.8.1
source: src/generate/rust/schema/tests.rs
expression: generate_rust(&schemas)?
---
pub enum Foo {
    Bar {
        one: String,
        two: std::path::PathBuf,
    },
    Baz(std::borrow::Cow<'static, str>),
}

